package example;

/**
 * CLI operating modes.
 */
public enum Mode {
	LINT,
	UML,
	ADVICE
}
