@startuml

package presentation {
  class LintCli {
    +main(args: String[])
    -parse(args: String[]): Command
  }

  class LintApplication {
    +run(command: Command)
    -runLint(targets: List<String>)
    -runUml(targets: List<String>)
    -runAdvice(targets: List<String>)
    -buildDesignSummary(node: ClassNode): String
  }

  class Command {
    +mode: Mode
    +targets: List<String>
  }

  enum Mode {
    LINT
    UML
    ADVICE
  }

  interface Reporter {
    +report(result: LintResult)
  }

  class ConsoleReporter {
    +report(result: LintResult)
  }
}

package domain {
  interface LintRule {
    +check(node: ClassNode): List<Violation>
  }

  abstract class RuleTemplate {
    +check(node: ClassNode): List<Violation>
    #collectViolations(node: ClassNode): List<Violation>
  }

  class NamingConventionRule
  class EqualsHashCodeRule
  class RedundantInterfaceRule
  class NonPublicConstructorRule

  interface RuleRegistry {
    +rules(): List<LintRule>
  }

  class DefaultRuleRegistry {
    -rules: List<LintRule>
    +rules(): List<LintRule>
    +register(rule: LintRule)
  }

  class Violation {
    +target: Target
    +name: String
    +message: String
  }

  enum Target {
    CLASS
    FIELD
    METHOD
  }

  class LintResult {
    +violations: List<Violation>
    +hasErrors(): boolean
  }
}

package datasource {
  class PlantUmlGenerator {
    +generateClassDiagram(node: ClassNode): String
  }

  class LLMDesignAdvisor {
    +analyzeDesign(summary: String): String
  }
}

LintCli --> LintApplication
LintApplication --> RuleRegistry
LintApplication --> LintRule
LintApplication --> Reporter
LintApplication ..> PlantUmlGenerator
LintApplication ..> LLMDesignAdvisor

RuleRegistry --> LintRule
RuleTemplate <|-- NamingConventionRule
RuleTemplate <|-- EqualsHashCodeRule
RuleTemplate <|-- RedundantInterfaceRule
RuleTemplate <|-- NonPublicConstructorRule
LintRule --> Violation
LintResult ..> Violation
Violation ..> Target

Reporter <|.. ConsoleReporter

PlantUmlGenerator ..> ClassNode
LintRule ..> ClassNode
LintApplication ..> ClassNode
LLMDesignAdvisor ..> LintApplication

@enduml
